--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -13,24 +13,112 @@
     <!-- My CSS File -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <!-- My JS Filess -->
+    <script src="globals.js"></script>
+    <script src="map_functions.js"></script>
+    <script src="flights_paths_drawer.js"></script>
+    <script src="messages_area.js"></script>
+    <script src="etc.js"></script>
+
 </head>
-<body>
+<body style="background-color: #cfcfe3">
     <div class="row">
         <div class="col-md-9">
 
-            <iframe width="100%" id="map" frameborder="0" style="border:0"
-                    src="https://www.google.com/maps/embed/v1/view?zoom=7&center=31.0461%2C34.8516&key=AIzaSyBWoYUQhvIp5rp0zqiibS8vSOICgEB5t5c"
-                    allowfullscreen></iframe>
+            <div id="map"></div>
+            <script src="init_map.js"></script>
+            <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyBWoYUQhvIp5rp0zqiibS8vSOICgEB5t5c&callback=initMap"
+                    async defer></script>
 
             <div class="divisor"></div>
 
-            <div id="flight-details">
-                flight details go here
+            <table class="table table-borderless table-dark" id="flight-details">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Latitude</th>
+                        <th scope="col">Longitude</th>
+                        <th scope="col">Passengers</th>
+                        <th scope="col">Takeoff</th>
+                        <th scope="col">External?</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr id="details-table-row">
+                        <td id="cell_flight_id"></td>
+                        <td id="cell_longitude"></td>
+                        <td id="cell_latitude"></td>
+                        <td id="cell_passengers"></td>
+                        <td id="cell_date_time"></td>
+                        <td id="cell_is_external"></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="divisor"></div>
+
+            <div class="container" id="time-picking-area">
+
+                <script>
+
+                    function prefer_specific_time() {
+
+                        document.getElementById('inpt-specific-time').disabled = false;
+                        document.getElementById('real-time-area').setAttribute('style', 'color: gray');
+
+                    }
+
+                    function prefer_real_time() {
+
+                        document.getElementById('inpt-specific-time').disabled = true;
+                        document.getElementById('real-time-area').setAttribute('style', 'color: black');
+                    }
+
+                </script>
+
+                <div title="See flights that are currently in air, and watch them moving on the map.">
+
+                    <input type="radio" name="time-picking" id="rb-real-time" onchange="prefer_real_time()" />
+
+                    <label for="rb-real-time">Use Real Time</label>
+
+                    <span id="real-time-area">
+                        <label for="rb-real-time">[</label>
+                        <label for="rb-real-time" id="my-real-time-label">current datetime</label>
+                        <label for="rb-real-time">]</label>
+                    </span>
+                </div>
+
+                <div title="See a static image of the sky, as of a specific moment in the past or in the future.">
+
+                    <input type="radio" name="time-picking" id="rb-specific-time" onchange="prefer_specific_time()" />
+
+                    <label for="rb-specific-time"> Relative to</label>
+
+                    <input type="datetime-local" id="inpt-specific-time" name="time-picking">
+                </div>
+
+                <script>
+                    /* init radio buttons */
+
+                    document.getElementById('rb-real-time').checked = true;
+                    prefer_real_time(); // make the other one gray
+
+                    function update_realtime_label() {
+                        document.getElementById('my-real-time-label').innerText = now_in_nice_format();
+                    }
+
+                    update_realtime_label();
+                    setInterval(update_realtime_label, 1000); // repeat every second...
+                </script>
+
             </div>
-
-            <div class="divisor"></div>
-
-            <button onclick="greet('nitsan')">test button</button>
 
             <div class="divisor"></div>
 
@@ -38,32 +126,45 @@
 
         <div class="col-md-3">
 
-            <div id="my-flights">
-                my flights go here
+            <script src="plans_table.js"></script>
+
+            <table class="table table-borderless table-striped table-active" id="my-flights">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Airline</th>
+                        <th scope="col">...</th>
+                    </tr>
+                </thead>
+                <tbody id="flights-table-body">
+                </tbody>
+            </table>
+
+            <script>add_placeholder_to_table()</script>
+
+            <!--<div class="divisor"></div>-->
+
+            <div class="container" id="upload-area">
+                <input id="file" type="file" />
+                <script src="flight_plan_uploder.js"></script>
+                <label style="color: gray">(add flight-plans in json format)</label>
+            </div>
+
+            <input type="text" id="test-input" />
+            <!--<script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=geometry"></script>-->
+
+            <div class="container">
+                <p id="msg_paragraph"></p>
             </div>
 
             <div class="divisor"></div>
 
-            <div id="external-flights">
-                external-flights go here
-            </div>
-
-            <div class="divisor"></div>
-
-            <input id='my-uploader' type='file' onchange='on_drag(event)' />
-            <label style="color: lightgray">(add flight-plans in json format)</label>
+            <button onclick="fatut()">test</button>
 
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-    <!-- My JS File -->
-    <script src="client.js"></script>
+    <script src="mainloop.js"></script>
 
 </body>
 </html>
