--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -38,7 +38,8 @@
 
             <div class="divisor"></div>
 
-            <table class="table table-borderless table-dark" id="flight-details">
+            <table class="table table-borderless table-dark" id="flight-details"
+                   style="font-variant-numeric: tabular-nums">
                 <thead>
                     <tr>
                         <th scope="col">ID</th>
@@ -65,9 +66,7 @@
 
             <div class="container" id="time-picking-area">
 
-                <script>
-
-                    function prefer_specific_time() {
+                <script>function prefer_specific_time() {
 
                         document.getElementById('inpt-specific-time').disabled = false;
                         document.getElementById('real-time-area').setAttribute('style', 'color: gray');
@@ -78,9 +77,7 @@
 
                         document.getElementById('inpt-specific-time').disabled = true;
                         document.getElementById('real-time-area').setAttribute('style', 'color: black');
-                    }
-
-                </script>
+                    }</script>
 
                 <div title="See flights that are currently in air, and watch them moving on the map.">
 
@@ -104,8 +101,7 @@
                     <input type="datetime-local" id="inpt-specific-time" name="time-picking">
                 </div>
 
-                <script>
-                    /* init radio buttons */
+                <script>/* init radio buttons */
 
                     document.getElementById('rb-real-time').checked = true;
                     prefer_real_time(); // make the other one gray
@@ -115,12 +111,15 @@
                     }
 
                     update_realtime_label();
-                    setInterval(update_realtime_label, 1000); // repeat every second...
-                </script>
+                    setInterval(update_realtime_label, 1000); // repeat every second...</script>
 
             </div>
 
             <div class="divisor"></div>
+
+            <div class="container">
+                <p id="msg_paragraph"></p>
+            </div>
 
         </div>
 
@@ -128,7 +127,7 @@
 
             <script src="plans_table.js"></script>
 
-            <table class="table table-borderless table-striped table-active" id="my-flights">
+            <table class="table table-borderless table-active" id="my-flights">
                 <thead>
                     <tr>
                         <th scope="col">ID</th>
@@ -148,13 +147,6 @@
                 <input id="file" type="file" />
                 <script src="flight_plan_uploder.js"></script>
                 <label style="color: gray">(add flight-plans in json format)</label>
-            </div>
-
-            <input type="text" id="test-input" />
-            <!--<script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=geometry"></script>-->
-
-            <div class="container">
-                <p id="msg_paragraph"></p>
             </div>
 
             <div class="divisor"></div>
