--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -64,7 +64,7 @@
 
             <div class="divisor"></div>
 
-            <div class="container" id="time-picking-area">
+            <div id="time-picking-area">
 
                 <script>function prefer_specific_time() {
 
@@ -117,9 +117,11 @@
 
             <div class="divisor"></div>
 
-            <div class="container">
+            <div>
                 <p id="msg_paragraph"></p>
             </div>
+
+            <div class="divisor"></div>
 
         </div>
 
@@ -150,8 +152,6 @@
             </div>
 
             <div class="divisor"></div>
-
-            <button onclick="fatut()">test</button>
 
         </div>
     </div>
